<resources>
    <string name="app_name">Team Fan</string>
    <string name="action_change_team">Change team</string>

    <!-- SyncAdapter related -->
    <!--<string name="sync_account_type">com.simonov.teamfan</string>-->
    <!--<string name="content_authority">teamfan.simonov.com</string>-->
    <string name="sync_account_type">teamfan.simonov.com</string>
    <string name="content_authority">com.simonov.teamfan</string>

    <!--Settings and prefs-->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="pref_choose_team_label">Choose team</string>
    <string name="pref_choose_team_key">choose_team_key</string>
    <string name="pref_choose_team_default">miami-heat</string>

    <!--api-->
    <string name="base_url">https://erikberg.com</string>

    <!--Teams Name-->
    <string name="atlanta_hawks">Atlanta Hawks</string>
    <string name="boston_celtics">Boston Celtics</string>
    <string name="brooklyn_nets">Brooklyn Nets</string>
    <string name="charlotte_hornets">Charlotte Hornets</string>
    <string name="chicago_bulls">Chicago Bulls</string>
    <string name="cleveland_cavaliers">Cleveland Cavaliers</string>
    <string name="dallas_mavericks">Dallas Mavericks</string>
    <string name="denver_nuggets">Denver Nuggets</string>
    <string name="detroit_pistons">Detroit Pistons</string>
    <string name="golden_state_warriors">Golden State Warriors</string>
    <string name="houston_rockets">Houston Rockets</string>
    <string name="indiana_pacers">Indiana Pacers</string>
    <string name="los_angeles_clippers">Los Angeles Clippers</string>
    <string name="los_angeles_lakers">Los Angeles Lakers</string>
    <string name="memphis_grizzlies">Memphis Grizzlies</string>
    <string name="miami_heat">Miami Heat</string>
    <string name="milwaukee_bucks">Milwaukee Bucks</string>
    <string name="minnesota_timberwolves">Minnesota Timberwolves</string>
    <string name="new_orleans_pelicans">New Orleans Pelicans</string>
    <string name="new_york_knicks">New York Knicks</string>
    <string name="oklahoma_city_thunder">Oklahoma City Thunder</string>
    <string name="orlando_magic">Orlando Magic</string>
    <string name="philadelphia_76ers">Philadelphia 76ers</string>
    <string name="phoenix_suns">Phoenix Suns</string>
    <string name="portland_trail_blazers">Portland Trail Blazers</string>
    <string name="sacramento_kings">Sacramento Kings</string>
    <string name="san_antonio_spurs">San Antonio Spurs</string>
    <string name="toronto_raptors">Toronto Raptors</string>
    <string name="utah_jazz">Utah Jazz</string>
    <string name="washington_wizards">Washington Wizards</string>

    <!--Teams Query-->
    <string name="query_atlanta_hawks">atlanta-hawks</string>
    <string name="query_boston_celtics">boston-celtics</string>
    <string name="query_brooklyn_nets">brooklyn-nets</string>
    <string name="query_charlotte_hornets">charlotte-hornets</string>
    <string name="query_chicago_bulls">chicago-bulls</string>
    <string name="query_cleveland_cavaliers">cleveland-cavaliers</string>
    <string name="query_dallas_mavericks">dallas-mavericks</string>
    <string name="query_denver_nuggets">denver-nuggets</string>
    <string name="query_detroit_pistons">detroit-pistons</string>
    <string name="query_golden_state_warriors">golden-state-warriors</string>
    <string name="query_houston_rockets">houston-rockets</string>
    <string name="query_indiana_pacers">indiana-pacers</string>
    <string name="query_los_angeles_clippers">los-angeles-clippers</string>
    <string name="query_los_angeles_lakers">los-angeles-lakers</string>
    <string name="query_memphis_grizzlies">memphis-grizzlies</string>
    <string name="query_miami_heat">miami-heat</string>
    <string name="query_milwaukee_bucks">milwaukee-bucks</string>
    <string name="query_minnesota_timberwolves">minnesota-timberwolves</string>
    <string name="query_new_orleans_pelicans">new-orleans-pelicans</string>
    <string name="query_new_york_knicks">new-york-knicks</string>
    <string name="query_oklahoma_city_thunder">oklahoma-city-thunder</string>
    <string name="query_orlando_magic">orlando-magic</string>
    <string name="query_philadelphia_76ers">philadelphia-76ers</string>
    <string name="query_phoenix_suns">phoenix-suns</string>
    <string name="query_portland_trail_blazers">portland-trail-blazers</string>
    <string name="query_sacramento_kings">sacramento-kings</string>
    <string name="query_san_antonio_spurs">san-antonio-spurs</string>
    <string name="query_toronto_raptors">toronto-raptors</string>
    <string name="query_utah_jazz">utah-jazz</string>
    <string name="query_washington_wizards">washington-wizards</string>

    <!--Detail activity-->
    <string name="title_activity_detail">Game Info</string>
    <string name="label_main_info_fragment">MAIN</string>
    <string name="label_leaders_fragment">Leaders</string>

    <!-- For Shared Element Transitions -->
    <string name="detail_icon_transition_name" translatable="false">TN_DetailIcon</string>

    <string name="label_previous_games_fragment">Previous games</string>
    <string name="default_text">default text</string>

    <string name="win_loss">W-L</string>
    <string name="turnovers">TO</string>
    <string name="field_goal_per">FG %</string>
    <string name="three_point_per">3P %</string>
    <string name="field_goal">FG</string>
    <string name="three_point">3P</string>
    <string name="free_throws">FT</string>
    <string name="free_throws_per">FT %</string>
    <string name="rebounds">R</string>
    <string name="assists">A</string>
    <string name="steals">S</string>
    <string name="blocks">B</string>
    <string name="fouls">F</string>
    <string name="minutes">min</string>

    <string name="label_preview_game_fragment">Preview</string>

    <!-- Error get information -->
    <string name="empty_games_list">No games information available</string>
    <string name="empty_games_list_no_network">No games information available. The network is not available to fetch games data.</string>
    <string name="empty_games_list_server_down">No games information available. The server is not returning data.</string>
    <string name="empty_games_list_server_error">No games information available. The server is not returning valid data. Please check for an updated version of TeamFan.</string>
    <string name="empty_games_list_invalid_team">No games information available. The team in settings is not recognized by the games server.</string>
    <string name="pref_games_status_key">games-status</string>
    <string name="error_update_games_list_no_network">Error update games schedule. The network is not available to fetch games data.</string>

    <string name="content_description_add_event_to_calendar">Add event to your calendar</string>
    <string name="content_description_preview_game" formatted="false">\"Game will start %s\"</string>
    <string name="win_loss_divider" formatted="false">%s-%s</string>
    <string name="content_description_best_players" formatted="false">Game leaders %s %d points and %s %d points</string>
    <string name="shot_made_attempted_divider" formatted="false">%d/%d</string>
    <string name="content_description_main_game_info" formatted="false">NBA event %s at %s. Field goal percent %d %s, %d %s.</string>

    <!--widget-->
    <string name="add_widget">Add widget</string>
    <string name="title_widget_next_game">#Next Game</string>

    <!--admob-->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1651911101126569/5713715133</string>
    <string name="banner_ad_unit_name" translatable="false">Banner on Detail</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-1651911101126569/7190448334</string>
    <string name="interstitial_ad_unit_name" translatable="false">At Detail</string>
    <string name="device_id">33a771c405438d23</string>
    <string name="server_url">http://10.0.2.2:8080/_ah/api/</string>

    <string name="label_map_game_fragment">Location</string>
    <string name="action_share">Share</string>
    <string name="pref_enable_notifications_key">enable_notification_key</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="pref_last_notification">last_notifications</string>
    <string name="format_notification" formatted="false">%s %s - %s %s</string>
    <string name="date_recycler_view_format" formatted="false">%s game:%s/%d</string>
    <string name="content_description_recycler_view_item" formatted="false">NBA event %s versus %s . Game score %d %s %d %s</string>
    <string name="content_description_recycler_view_item_unfinished" formatted="false">NBA event %s versus %s . Game start at %s</string>
    <string name="content_description_fab_add_to_calendar">Add game to the calendar</string>


</resources>
